--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,40 @@
 spring.application.name=HRMS-DASHBOARD-ALPHA
+server.servlet.context-path=/GemsDashboard
 
-spring.datasource.url=jdbc:mysql://localhost:3306/hrmsdashboard
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=Jaggu@1013
+spring.datasource.url=jdbc:postgresql://10.47.246.92:5432/postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=hrms@123
 
+# Postgres JPA Properties
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.web.resources.static-locations=classpath:/static/
 
-# JWT Secret
+# Log Levels
+logging.level.root=INFO
+logging.level.com.hrms2.germs=DEBUG
+logging.file.name=/opt/tomcat/logs/gemsDashboardNew.log
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+#JWT Secret
 #jwt.secret=kKZ9cH9wLjZ0k9zU1hF5OqNFj4K0fDz13xEjEeEMVDM=
 #jwt.expiration=86400000
+
+sftp.servers[0].name=GEMS Production Server
+sftp.servers[0].host=10.47.244.9
+sftp.servers[0].port=22
+sftp.servers[0].username=root
+sftp.servers[0].password=gems4gekar
+
+sftp.servers[1].name=HRMS IM Server
+sftp.servers[1].host=10.47.246.92
+sftp.servers[1].port=22
+sftp.servers[1].username=agadmin
+sftp.servers[1].password=agadmin@123
+
+sftp.servers[2].name=HRMS Production Server
+sftp.servers[2].host=172.31.66.42
+sftp.servers[2].port=2324
+sftp.servers[2].username=agsftp
+sftp.servers[2].password=Kiv0phu5be0ooleitheidoolo
