--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=HRMS-DASHBOARD-ALPHA
-server.servlet.context-path=/GemsDashboard
+#server.servlet.context-path=/GemsDashboard
 
 spring.datasource.url=jdbc:postgresql://10.47.246.92:5432/postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
